# Mader-ABC-V2-Music-Dataset-Pipeline

./: .gitignore  CITATION.cff  LICENSE  README.md  REPORT.md  all_tokens.sh  clear_data.sh  convert_to_abc.sh  encoder_decoder_utils.py  flatten.sh  match_tracks.sh  push_hf_dataset.py  pyproject.toml  setup_softwares.sh  split_abc_tracks.sh
data/: abc_pipeline.sh  abc_pipeline_order.txt  clean_abc.sh  clear_data.sh  convert_to_musicxml.sh  extract.sh  flatten.sh  generate_metadata.sh  pipeline_order.txt  sanitize_midi.sh  setup_data.sh  setup_softwares.sh  tokenize_abc.sh  tracks.json
data/genre/: mapping.json  possible_genres.json
data/scripts/: Convert2ABC.ipynb  Flatten.ipynb  all_tokens.py  clean_abc.py  convert_to_abc.py  convert_to_musicxml.py  data_pipeline_lib.py  flatten.py  generate_metadata.py  match_tracks.py  matched_songs.py  render_scores.ipynb  sanitize_midi.py  split_abc_track.py  split_abc_tracks.py  tokenize_abc.py
data/scripts/Sandbox/: Convert2ABC.ipynb  Convert2MusicXML.ipynb  ConvertXML2ABC.ipynb  Flatten.ipynb  MergeWithoutDrums.ipynb  VerifyPaths.ipynb  music21Test.ipynb  render_scores.ipynb  verify_metadata.py
genre/: possible_genres.json
scripts/: all_tokens.py  build_hf_dataset.py  build_parquet_dataset.py  clean_abc.py  convert_to_abc.py  convert_to_musicxml.py  data_pipeline_lib.py  flatten.py  match_tracks.py  setup_softwares.sh  tokenize_abc.py
scripts/Sandbox/: MergeWithoutDrums.ipynb  VerifyPaths.ipynb  verify_metadata.py
